react-create-app on Heroku

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_TOKEN=ZMpNO7KEX1fIvQ06PmClyXsCZ
-REACT_APP_API_GOOGLE_TOKEN=AIzaSyCZ7l9OtMImIWvKRhmTPsvGqVvcy7ukIL4
+REACT_APP_API_GOOGLE_TOKEN=AIzaSyC42ZX_tQ1sJIAUY1PPWDwjeBdD8vHlRo8
+REACT_APP_GOOGLE_URL=https://maps.googleapis.com/maps/api/geocode/json?address=
